[workspace]
members = ["bundle", "dino", "dino-macro", "dino-server"]

resolver = "2"

[workspace.dependencies]
bundle = { path = "bundle" }
dino-macro = { path = "dino-macro" }
dino-server = { path = "dino-server" }


serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
