[package]
name = "dino-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true


[dependencies]
anyhow = "1.0.98"
# A library for parsing and validating attributes in derive macros
darling = "0.20.9"
# A wrapper around proc-macro that provides a more stable API
proc-macro2 = "1.0.84"
# A library for generating Rust code from templates
quote = "1.0.36"
# A library for parsing Rust code into an AST
syn = { version = "2.0.66", features = ["extra-traits"] }
