[package]
name = "dino-server"
version = "0.1.0"
edition = "2024"

[dependencies]
dino-macro = { workspace = true }

anyhow = "1.0.86"
arc-swap = "1.7.1"
axum = { version = "0.8.4", features = ["http2", "query", "tracing", "macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
dashmap = "6.1.0"
indexmap = { version = "2.2.6", features = ["serde"] }
matchit = "0.8.4"
rquickjs = { version = "0.9.0", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.33"
thiserror = "2.0.12"
tokio = { workspace = true }
tower = "0.5.2"
tracing = { workspace = true }
typed-builder = "0.21.0"

[dev-dependencies]
tracing-subscriber = { workspace = true }
