[package]
name = "dino"
version = "0.1.0"
edition = "2024"
license = "MIT"
resolver = "2"

[dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
blake3 = "1.8.2"
clap = { version = "4.5.38", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["completion", "fuzzy-matcher", "fuzzy-select", "history"] }
enum_dispatch = "0.3.13"
git2 = "0.20.2"
rquickjs = "0.9.0"
rquickjs-macro = "0.9.0"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
glob = "0.3.2"
typed-builder = "0.21.0"

bundle = { workspace = true }
dino-macro = { workspace = true }
